<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_nextcloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/button_nextcloudLogin"
        app:cornerRadius="60px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Password" />

    <Button
        android:id="@+id/button_affanweb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_affanwebLogin"
        app:cornerRadius="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_nextcloud" />

    <TextView
        android:id="@+id/Text_ForgotPwd"
        android:layout_width="131dp"
        android:layout_height="22dp"
        android:layout_marginTop="36dp"
        android:text="@string/label_forgot_pass_en"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_affanweb" />

    <TextView
        android:id="@+id/Label_Login"
        android:layout_width="183dp"
        android:layout_height="82dp"
        android:text="@string/label_login_en"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <EditText
        android:id="@+id/Text_Email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/label_email_en"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Label_Login" />

    <EditText
        android:id="@+id/Text_Password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/label_password_en"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_login_en"
        app:cornerRadius="60px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Password" />

    <TextView
        android:id="@+id/Label_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>