<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:text="@string/hint_select_Q2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_ans1"
        app:layout_constraintTop_toBottomOf="@+id/editText_ans1" />

    <Spinner
        android:id="@+id/spinner_Q1"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/label_ForgotPwd"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:text="@string/label_forgot_pass_en"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <Spinner
        android:id="@+id/spinner_Q2"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText_ans2"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/spinner_Q2"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Q2" />

    <TextView
        android:id="@+id/label_Questions"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_enter_Qns"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label_ForgotPwd"
        app:layout_constraintTop_toBottomOf="@+id/label_ForgotPwd" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="103dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:text="@string/hint_select_Q1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/label_Questions"
        app:layout_constraintTop_toBottomOf="@+id/label_Questions" />

    <EditText
        android:id="@+id/editText_ans1"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/spinner_Q1"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Q1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_verify"
        app:layout_constraintStart_toStartOf="@+id/editText_ans2"
        app:layout_constraintTop_toBottomOf="@+id/editText_ans2" />
</androidx.constraintlayout.widget.ConstraintLayout>